[gd_scene load_steps=8 format=3 uid="uid://c81nkg5ibqm22"]

[ext_resource type="Script" path="res://enemy_ship.gd" id="1_r41y2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6ikx4"]
height = 54.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ay6h6"]
radius = 12.0
height = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_63eni"]
radius = 615.43

[sub_resource type="CircleShape2D" id="CircleShape2D_tuhem"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_we6lv"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hsox8"]
radius = 2447.09

[node name="EnemyShip" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1_r41y2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_6ikx4")

[node name="BulletDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetection"]
modulate = Color(1, 1, 1, 0.341176)
shape = SubResource("CapsuleShape2D_ay6h6")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
self_modulate = Color(1, 1, 1, 0.180392)
shape = SubResource("CircleShape2D_63eni")

[node name="Crosshair" type="CollisionShape2D" parent="."]
position = Vector2(0, -154)
shape = SubResource("CircleShape2D_tuhem")
disabled = true

[node name="Front" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_we6lv")

[node name="CooldownTimer" type="Timer" parent="."]

[node name="StandbyDetection" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandbyDetection"]
modulate = Color(1, 1, 1, 0.0745098)
shape = SubResource("CircleShape2D_hsox8")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
